[DROOLS-4070] allow to define the priority of alternative services du… (#466)
* [DROOLS-4070] allow to define the priority of alternative services during service discovery

* wip

* [DROOLS-4070] define service priority through annotation

* wip

* wip

* wip

* wip

* wip